<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>xyz.derkades</groupId>
	<artifactId>ssx-connector</artifactId>
	<version>2.0.0-beta</version>
	
	<name>ServerSelectorX-Connector</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.8</jdk.version>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		
		<resources>
			<resource>
				<directory>resources</directory>
				<includes>
					<include>*</include>
				</includes>
				<filtering>true</filtering>
			</resource>
		</resources>
		
		<finalName>${project.name}-${project.version}</finalName>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>false</downloadJavadocs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<minimizeJar>true</minimizeJar>
					
					<relocations>
						<relocation>
							<pattern>org.bstats.bukkit</pattern>
							<shadedPattern>xyz.derkades.SSX_Connector.ext.bstats</shadedPattern>
						</relocation>
					</relocations>

					<artifactSet>
						<excludes>
							<exclude>org.apache.commons:commons-lang3</exclude>
							<exclude>org.bukkit:bukkit</exclude>
							<exclude>org.yaml:snakeyaml</exclude>
							<exclude>commons-lang:commons-lang</exclude>
						</excludes>
					</artifactSet>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.8.8-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>xyz.derkades</groupId>
			<artifactId>Derkutils</artifactId>
			<version>1.3.1.2</version>
		</dependency>

		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.10.3</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>

	</dependencies>

	<repositories>

		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>

		<repository>
			<id>derkades</id>
			<url>https://derkades.xyz/maven</url>
		</repository>
		
		<repository>
			<id>bstats-repo</id>
			<url>http://repo.bstats.org/content/repositories/releases/</url>
		</repository>

		<repository>
			<id>placeholderapi</id>
			<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>

	</repositories>

</project>